--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nama" />
+
     <TextView
         android:id="@+id/id_n"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <EditText
         android:id="@+id/nama"
         android:layout_width="match_parent"
@@ -34,34 +36,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Tinggi" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <Button
-        android:id="@+id/tambah"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TAMBAH" />
 
-    <Button
-        android:id="@+id/ubah"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ubah"
-        />
-
-    <Button
-        android:id="@+id/hapus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="hapus" />
-</LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycles"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listItem="@layout/item_user" />
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/tambah"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TAMBAH" />
+
+        <Button
+            android:id="@+id/ubah"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ubah" />
+
+        <Button
+            android:id="@+id/hapus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hapus" />
+    </LinearLayout>
+    <include layout="@layout/list"/>
 
 </LinearLayout>
